Support SqlDelight v2 (#37)